[package]
name = "p3-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-air = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", features = ["nightly-features"], branch = "main" }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-blake3 = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-mds = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-poseidon = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }                                # the "parallel" feature is NOT on by default to allow single-threaded benchmarking
rand = "0.8.5"
